# pushastore-xml

./: .gitignore  Cargo.toml  config.sample.toml  input.xml  run.bat
src/: converter.rs  main.rs
