[package]
name = "pushastore-xml"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
xml-rs = "0.6"
encoding = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
xlsx = { git = "https://github.com/laumann/xlsx-rs.git", branch = "update-xml-writer" }
clap = "2.26"
